--- a/.github/workflows/crawler.yml
+++ b/.github/workflows/crawler.yml
@@ -3,7 +3,7 @@ name: Novel Crawler
 on:
   # Run every 6 hours
   schedule:
-    - cron: '0 */6 * * *'  # At minute 0 past every 6th hour
+    - cron: '0 0 0 1,3,5,7,9,11,13,15,17,19,21,23,25,27,29,31 * *'
   
   # Allow manual trigger from GitHub UI
   workflow_dispatch:
