--- a/.github/workflows/crawler.yml
+++ b/.github/workflows/crawler.yml
@@ -1,9 +1,9 @@
 name: Novel Crawler
 
 on:
-  # Run every 6 hours
+  # Run every 24 hours at midnight UTC (0:00 AM daily)
   schedule:
-    - cron: '0 0 0 1,3,5,7,9,11,13,15,17,19,21,23,25,27,29,31 * *'
+    - cron: '0 0 * * *'
   
   # Allow manual trigger from GitHub UI
   workflow_dispatch:
